--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -131,13 +131,13 @@ jobs:
       - name: Rename Apk
         run: |
           mkdir builds
-          mv android/app-signed.apk ./builds/Logseq-android-${{ steps.ref.outputs.version }}.apk
+          mv android/app-signed.apk ./builds/logseq-android-${{ steps.ref.outputs.version }}.apk
 
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: logseq-android-builds
-          path: builds
+      # - name: Upload Artifact
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: logseq-android-builds
+      #     path: builds
 
       - name: Telegram Notify
         uses: appleboy/telegram-action@master
@@ -145,4 +145,12 @@ jobs:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: Build Complete Logseq-android-${{ steps.ref.outputs.version }}.apk
-          document: builds/Logseq-android-${{ steps.ref.outputs.version }}.apk
+          document: builds/logseq-android-${{ steps.ref.outputs.version }}.apk
+
+      - name: Upload File
+        id: upload
+        uses: JantHsueh/upload-file-action@master
+        with:
+          url: https://n8n.darwis.id/webhook/8752e9b8-734a-4f7e-927a-052d592504ce
+          forms: '{"fileName":"logseq-android-${{ steps.ref.outputs.version }}.apk"}'
+          fileForms: '{"data":"builds/logseq-android-${{ steps.ref.outputs.version }}.apk"}'
