--- a/.github/workflows/build-js.yml
+++ b/.github/workflows/build-js.yml
@@ -136,13 +136,13 @@ jobs:
           message: Build Complete Logseq-js-${{ steps.ref.outputs.version }}
           document: ./static/logseq-js-${{ steps.ref.outputs.version }}.zip
 
-      - name: Upload File
-        id: upload
-        uses: JantHsueh/upload-file-action@master
-        with:
-          url: https://n8n.darwis.id/webhook/8752e9b8-734a-4f7e-927a-052d592504ce
-          forms: '{"fileName":"logseq-js-${{ steps.ref.outputs.version }}.zip"}'
-          fileForms: '{"data":"static/logseq-js-${{ steps.ref.outputs.version }}.zip"}'
+      # - name: Upload File
+      #   id: upload
+      #   uses: JantHsueh/upload-file-action@master
+      #   with:
+      #     url: https://n8n.darwis.id/webhook/8752e9b8-734a-4f7e-927a-052d592504ce
+      #     forms: '{"fileName":"logseq-js-${{ steps.ref.outputs.version }}.zip"}'
+      #     fileForms: '{"data":"static/logseq-js-${{ steps.ref.outputs.version }}.zip"}'
 
       - name: Remove Js Zip
         run: rm logseq-js-${{ steps.ref.outputs.version }}.zip
