--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -37,6 +37,7 @@ on:
 env:
   CLOJURE_VERSION: '1.10.1.763'
   NODE_VERSION: '16'
+  JAVA_VERSION: '11'
 
 jobs:
   build-apk:
@@ -66,9 +67,10 @@ jobs:
             ${{ runner.os }}-yarn-
 
       - name: Setup Java JDK
-        uses: actions/setup-java@v1.4.3
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.8
+          distribution: 'zulu'
+          java-version: ${{ env.JAVA_VERSION }}
 
       - name: Cache clojure deps
         uses: actions/cache@v2
@@ -95,13 +97,12 @@ jobs:
           sed -i 's/versionName ".*"/versionName "${{ steps.ref.outputs.version }}-drw"/g' android/app/build.gradle
 
       - name: Compile CLJS
-        run: yarn install && yarn release
+        run: yarn install && yarn release-android-app
 
       - name: Prepare public Directory
         run: |
           cp -r static public/
           rm -rvf public/static/js/publishing
-          rm -rvf public/workspaces
           rm -rvf public/static/js/*.js.map || true
           rm -rvf public/static/*.*
           rm -rvf public/static/ios
